# LifeTimeCircle-ServiceHeft-4.0

./: .gitattributes  .gitignore  ACCESSIBILITY_PLAN.md  AGENTS.md  CHANGELOG.md  COMMIT_LIST.txt  MASTERPLAN_SUMMARY.md  PR_TEMPLATE_2026-03-01.md  README.md  RECENT_FILES.txt  _bp_smoke.txt  _uploads_quarantine_p0.txt  bp.json  bp_checks.json  bp_min.json  package-lock.json
server/: .gitignore  README.md  pyproject.toml  uvicorn_run.ps1
server/app/: consent_store.py  deps.py  guards.py  main.py  rbac.py  services_init_.py
server/app/db/: base.py  (+1 more)
server/scripts/: README.md  audit_tail.py  auth_test.ps1  check_openapi_duplicates.py  ci_guard_required_job_pytest.ps1  dev_start_server.ps1  fix_core_security_indentation.ps1  fix_docs_encoding_utf8.ps1  fix_export_store_multitable.ps1  fix_export_store_multitable_v2.ps1  fix_future_and_forbid_imports.ps1  fix_main_create_app_indent.ps1  fix_main_indent_and_mount_consent.ps1  fix_main_py_public_site_indent.ps1  fix_moderator_guard_imports.ps1  fix_post_commit_cleanup.ps1  install_paste_guard_profile.ps1  ltc_guard_mojibake.ps1  ltc_verify_ist_zustand.ps1  ltc_verify_p0_mojibake_next10.ps1  ltc_web_toolkit.ps1  masterclipboard.py  patch_actor_source_of_truth_p0.ps1  patch_add_consent_guard_module_p0.ps1  patch_add_public_site.ps1  patch_add_web_frontend_skeleton.ps1  patch_admin_router.ps1  patch_admin_users_forbid_moderator.ps1  patch_admin_users_router_guard.ps1  patch_auth_router.ps1  patch_authz_401_to_403.ps1  patch_bom_gate_ci_and_docs.ps1  patch_ci_add_docs_validator_and_web_build.ps1  patch_ci_add_web_build_job.ps1  (+85 more)
(+252 files in other folders)
